--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -11,8 +11,8 @@ dependencies:
   http: ^0.13.4
   mobx: ^2.0.3 #^1.2.1+4 #
   intl: ^0.17.0
-  models:
-    path: ../models
+  models_base:
+    path: models_base
 #   path: ^1.8.0
 
 dev_dependencies:
