--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,11 +1,11 @@
-name: weebi_models
+name: models_weebi
 description: A starting point for Dart libraries or applications.
 version: 1.0.0
 # homepage: https://www.example.com
 publish_to: none
 
 environment:
-  sdk: '>=2.12 <3.0.0'
+  sdk: '>=2.12.0 <3.0.0'
 
 dependencies:
   http: ^0.13.4
