--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -15,6 +15,11 @@ dependencies:
     git:
       url: https://gitlab.com/weebi_git/models_base.git
       ref: main
+  models_common:
+    git:
+      url: https://gitlab.com/weebi_git/models_common.git
+      ref: main
+
 dev_dependencies:
   lints: ^1.0.0
   test: ^1.16.0
