--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -15,16 +15,10 @@ dependencies:
     git:
       url: https://gitlab.com/weebi_git/models_base.git
       ref: main
-  models_common:
-    git:
-      url: https://gitlab.com/weebi_git/models_common.git
-      ref: main
 
-dependency_overrides:
-  models_base: 
-    path: /Users/mac/Documents/GitHub/models_base
-  models_common:
-    path: /Users/mac/Documents/GitHub/models_common
+#dependency_overrides:
+#  models_base: 
+#    path: /Users/mac/Documents/GitHub/models_base
 
 dev_dependencies:
   lints: ^1.0.0
