--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -11,7 +11,8 @@ dependencies:
   http: ^0.13.4
   mobx: ^2.0.3 #^1.2.1+4 #
   intl: ^0.17.0
-  models_base: ^1.1.0
+  models_base: #^1.1.1
+    path : /Users/mac/Documents/GitHub/models_base
 
 dev_dependencies:
   lints: ^1.0.0
