--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,22 +1,20 @@
 name: models_weebi
+version: 1.0.6
+publish_to: https://onepub.dev/api/xnxpsdavuh/
+homepage: http://weebi.com
 description: A starting point for Dart libraries or applications.
-version: 1.0.5
-# homepage: https://www.example.com
-publish_to: none
-
-environment:
+environment: 
   sdk: '>=2.12.0 <3.0.0'
-
-dependencies:
+dependencies: 
   http: ^0.13.4
-  mobx: ^2.0.3 #^1.2.1+4 #
+  mobx: ^2.0.3
   intl: ^0.17.0
   models_base: ^1.3.2
-    #path: /Users/mac/Developer/models_base
-
-dev_dependencies:
+  collection: ^1.17.0
+  meta: ^1.7.0
+  sembast: ^3.3.1+1
+dev_dependencies: 
   lints: ^1.0.0
   test: ^1.16.0
-  build_runner: ^2.1.4 #^1.11.5
-  mobx_codegen: ^2.0.4 #^2.0.1+3 #mobx_codegen: ^1.1.2
-  #pedantic: ^1.10.0 #^1.9.2 #
+  build_runner: ^2.1.4
+  mobx_codegen: ^2.0.4
