--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,5 +1,5 @@
 name: models_weebi
-version: 1.0.6
+version: 1.0.8
 publish_to: https://onepub.dev/api/xnxpsdavuh/
 homepage: http://weebi.com
 description: A starting point for Dart libraries or applications.
@@ -9,8 +9,12 @@ dependencies:
   http: ^0.13.4
   mobx: ^2.0.3
   intl: ^0.17.0
-  models_base: ^1.3.2
-  collection: ^1.17.0
+  models_base: ^1.3.7
+    #hosted:
+    #  url: https://onepub.dev/api/xnxpsdavuh/
+    #  name: models_base
+    #version: ^1.3.7
+  collection: ^1.15.0
   meta: ^1.7.0
   sembast: ^3.3.1+1
 dev_dependencies: 
