--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -14,7 +14,7 @@ dependencies:
     #  url: https://onepub.dev/api/xnxpsdavuh/
     #  name: models_base
     #version: ^1.3.7
-  collection: ^1.14.12
+  collection: 1.14.12
   meta: ^1.7.0
   sembast: ^3.3.1+1
 dev_dependencies: 
