--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -15,7 +15,7 @@ dependencies:
     #  name: models_base
     #version: ^1.3.7
   collection: ^1.14.12
-  meta: ^1.7.0
+  meta: ^1.3.0 # ^1.7.0
   sembast: ^3.3.1+1
 dev_dependencies: 
   lints: ^1.0.0
