--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,8 +1,8 @@
 name: models_weebi
 version: 1.0.13
-publish_to: https://onepub.dev/api/xnxpsdavuh/
+#publish_to: #https://onepub.dev/api/xnxpsdavuh/
 homepage: http://weebi.com
-description: A starting point for Dart libraries or applications.
+description: models
 environment: 
   sdk: '>=2.12.0 <3.0.0'
 dependencies: 
@@ -15,7 +15,7 @@ dependencies:
     #  name: models_base
     #version: ^1.3.7
   collection: ^1.14.12
-  meta: #^1.3.0 # ^1.7.0
+  meta: ^1.3.0 # ^1.7.0
   sembast: ^3.3.1+1
 dev_dependencies: 
   lints: ^1.0.0
