--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -4,19 +4,20 @@ version: 1.0.13
 homepage: http://weebi.com
 description: models
 environment: 
-  sdk: '>=2.12.0 <3.0.0'
+  sdk: '>=2.19.6 <4.0.0' 
 dependencies: 
   http: ^0.13.4
   mobx: ^2.0.3
   intl: ^0.17.0
-  models_base: ^1.4.0
+  models_base: #^1.4.0 # ^1.4.2 with intl 18.1
+    path: ../models_base
+    
     #hosted:
     #  url: https://onepub.dev/api/xnxpsdavuh/
     #  name: models_base
     #version: ^1.3.7
   collection: ^1.14.12
   meta: ^1.3.0 # ^1.7.0
-  sembast: ^3.3.1+1
 dev_dependencies: 
   lints: ^1.0.0
   test: ^1.16.0
