--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,5 +1,5 @@
 name: models_weebi
-version: 1.0.13
+version: 1.0.14
 #publish_to: #https://onepub.dev/api/xnxpsdavuh/
 homepage: http://weebi.com
 description: models
@@ -9,8 +9,8 @@ dependencies:
   http: ^0.13.4
   mobx: ^2.0.3
   intl: ^0.17.0
-  models_base: #^1.4.0 # ^1.4.2 with intl 18.1
-    path: ../models_base
+  models_base: ^1.4.3 # ^1.4.2 with intl 18.1
+    #path: ../models_base
     
     #hosted:
     #  url: https://onepub.dev/api/xnxpsdavuh/
