--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,5 +1,5 @@
 name: models_weebi
-version: 1.0.16
+version: 1.0.16+1
 #publish_to: #https://onepub.dev/api/xnxpsdavuh/
 homepage: http://weebi.com
 description: models
@@ -12,6 +12,9 @@ dependencies:
   mobx: ^2.0.3
   ### weebi's own kitchen
   models_base: ^1.4.4
+  #money2: ^3.4.1
+  #Because every version of models_weebi from path depends on money2 ^3.4.1 which depends on meta ^1.9.0, every version of
+  #models_weebi from path requires meta ^1.9.0.
 dev_dependencies: 
   lints: ^1.0.0
   test: ^1.16.0
