--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,5 +1,5 @@
 name: models_weebi
-version: 1.0.16+1
+version: 1.0.17
 #publish_to: #https://onepub.dev/api/xnxpsdavuh/
 homepage: http://weebi.com
 description: models
