--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,5 +1,5 @@
 name: models_weebi
-version: 1.0.18
+version: 1.0.19
 #publish_to: #https://onepub.dev/api/xnxpsdavuh/
 homepage: http://weebi.com
 description: models
@@ -11,7 +11,7 @@ dependencies:
   meta: ^1.3.0 # ^1.7.0
   mobx: ^2.0.3
   ### weebi's own kitchen
-  models_base: ^1.4.6
+  models_base: ^1.4.6+1
   #money2: ^3.4.1
   #Because every version of models_weebi from path depends on money2 ^3.4.1 which depends on meta ^1.9.0, every version of
   #models_weebi from path requires meta ^1.9.0.
