--- a/.gitignore
+++ b/.gitignore
@@ -8,6 +8,6 @@ build/
 # Omit committing pubspec.lock for library packages; see
 # https://dart.dev/guides/libraries/private-files#pubspeclock.
 pubspec.lock
-models_base
-models_base
 .DS_Store
+lib/.DS_Store
+.gitignore
