--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,5 +1,5 @@
 name: models_weebi
-version: 1.0.19
+version: 1.0.21
 #publish_to: #https://onepub.dev/api/xnxpsdavuh/
 homepage: http://weebi.com
 description: models
@@ -8,10 +8,11 @@ environment:
 dependencies: 
   collection: ^1.14.12
   http: ^0.13.4
+  intl: ^0.18.1 #^0.17.0
   meta: ^1.3.0 # ^1.7.0
   mobx: ^2.0.3
+  sembast: ^3.1.0+2 #^3.3.1
   ### weebi's own kitchen
-  models_base: ^1.4.6+1
   #money2: ^3.4.1
   #Because every version of models_weebi from path depends on money2 ^3.4.1 which depends on meta ^1.9.0, every version of
   #models_weebi from path requires meta ^1.9.0.
