--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -4,20 +4,20 @@ version: 1.0.21
 homepage: http://weebi.com
 description: models
 environment: 
-  sdk: '>=2.19.6 <4.0.0' 
+  sdk: ">=3.1.5 <4.0.0"
 dependencies: 
-  collection: ^1.14.12
+  collection: ^1.17.2
   http: ^0.13.4
   intl: ^0.18.1 #^0.17.0
-  meta: ^1.3.0 # ^1.7.0
-  mobx: ^2.0.3
+  meta: ^1.9.1
+  mobx: ^2.2.1
   sembast: ^3.1.0+2 #^3.3.1
   ### weebi's own kitchen
   #money2: ^3.4.1
   #Because every version of models_weebi from path depends on money2 ^3.4.1 which depends on meta ^1.9.0, every version of
   #models_weebi from path requires meta ^1.9.0.
 dev_dependencies: 
-  lints: ^1.0.0
-  test: ^1.16.0
-  build_runner: ^2.1.4
-  mobx_codegen: ^2.0.4
+  lints: ^3.0.0
+  test: ^1.24.3
+  build_runner: ^2.4.6
+  mobx_codegen: ^2.4.0
